--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 ﻿:root {
     --pug-size: 25px;
- 
 }
 
     
@@ -9,7 +8,7 @@
 
 
 * {
-    font-family: 'Electrolize', serif;
+    font-family:'Londrina Solid', cursive;
 
 }
 
