--- a/css/game.css
+++ b/css/game.css
@@ -2,3 +2,15 @@
     width: 100%;
     height: 100%;
 }
+
+.score{
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+#puzzle{
+    margin: auto;
+}
